force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/clofor_com_cfs__Call_Out_Error__c.object-meta.xml
<CustomObject>
    <description>Manager call out errors</description>
    <label>API Tracking</label>
    <nameField>
        <displayFormat>APIT-{0000}</displayFormat>
        <label>API Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>