force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__API_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__API_Name__c</fullName>
    <label>API Tracking Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>