force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__Call_Date__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Call_Date__c</fullName>
    <label>Call Date</label>
    <type>DateTime</type>
</CustomField>