force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__Error_Content__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Error_Content__c</fullName>
    <label>Error Content</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>