force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__NumberOfSuccessfulTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfSuccessfulTrx__c</fullName>
    <label>Number of Successful Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>