force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__OriginSystem__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OriginSystem__c</fullName>
    <label>Origin System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>