force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__SuccessfulFail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SuccessfulFail__c</fullName>
    <label>Successful or Fail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SuccessfulFail</valueSetName>
    </valueSet>
</CustomField>