force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/fields/clofor_com_cfs__VATINV__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATINV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT/INV</label>
    <referenceTo>clofor_com_cfs__VAT_INVOICE__c</referenceTo>
    <relationshipLabel>API TRACKING</relationshipLabel>
    <relationshipName>APITracking</relationshipName>
    <type>Lookup</type>
</CustomField>