force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__API_Name__c</columns>
    <columns>clofor_com_cfs__APIConfig__c</columns>
    <columns>clofor_com_cfs__NumberOfSuccessfulTrx__c</columns>
    <columns>clofor_com_cfs__NumberOfFailTrx__c</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__SuccessfulFail__c</columns>
    <columns>clofor_com_cfs__Error_Content__c</columns>
    <columns>clofor_com_cfs__OriginSystem__c</columns>
    <columns>clofor_com_cfs__TargetSystem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>