force-app/main/default/objects/clofor_com_cfs__Call_Out_Error__c/listViews/clofor_com_cfs__API_error.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__API_error</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__API_Name__c</columns>
    <columns>clofor_com_cfs__Error_Content__c</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>API error</label>
</ListView>